Added Gym, Redesign

--- a/mainPage.html
+++ b/mainPage.html
@@ -6,97 +6,144 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
 </head>
+
 <body class="bg-dark text-light d-flex flex-column min-vh-100">
 
-  <header class="p-4 border-bottom border-warning">
+  <header class="p-4 border-bottom border-warning text-center">
     <h1 class="display-4 text-warning" style="font-family: 'Fredoka One', cursive;">Hey, I'm Dark!</h1>
     <p class="lead text-light">Welcome to my little info space 🌟</p>
   </header>
 
-  <main class="container-fluid flex-grow-1 d-flex gap-3 my-4">
+  <main class="container flex-grow-1 my-4">
+    <div class="row g-4">
 
       <!-- About Me -->
-      <div class="card horizontal-card border-warning shadow-lg">
-        <div class="card-body">
-          <h5>About Me</h5>
-          <p>I am just an average looking 17 year old that likes programming and working out.</p>
+      <div class="col-12 col-md-4">
+        <div class="card horizontal-card border-warning shadow-lg">
+          <div class="card-body">
+            <h5>About Me</h5>
+            <p>I’m a 17-year-old who enjoys programming, working out, gaming, and motorcycles.</p>
+          </div>
         </div>
       </div>
 
-      <!-- Sports -->
-      <div class="card horizontal-card border-danger shadow-lg">
-        <div class="card-body">
-          <h5>Sports ⚽🏀</h5>
-          <p>Favorite sports: Soccer and Basketball</p>
-          <ul>
-            <li>Soccer: I play every weekend</li>
-            <li>Basketball: Favorite team: Lakers</li>
-          </ul>
+      <!-- Gym -->
+      <div class="col-12 col-md-4">
+        <div class="card horizontal-card border-danger shadow-lg">
+          <div class="card-body">
+            <h5>Gym 🏋️‍♂️</h5>
+            <p>Find workouts that fit your setup:</p>
+            <div class="d-flex flex-column gap-2">
+              <a href="gym_bodyweight.html" target="_blank" class="btn btn-outline-warning btn-sm w-100">
+                <img src="images/bodyweight_icon.png" class="btn-icon"> Bodyweight Workouts 💪
+              </a>
+              <a href="gym_dumbbells.html" target="_blank" class="btn btn-outline-danger btn-sm w-100">
+                <img src="images/dumbbell_icon.png" class="btn-icon"> Dumbbell Exercises 🏋️
+              </a>
+              <a href="gym_machines.html" target="_blank" class="btn btn-outline-info btn-sm w-100">
+                <img src="images/machine_icon.png" class="btn-icon"> Machine Workouts ⚙️
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Programming -->
+      <div class="col-12 col-md-4">
+        <div class="card horizontal-card border-info shadow-lg">
+          <div class="card-body">
+            <h5>Programming 💻</h5>
+            <ul>
+              <li>Web development (HTML, CSS, JS)</li>
+              <li>Java & Swing GUI projects</li>
+              <li>AI tools and automation</li>
+            </ul>
+          </div>
         </div>
       </div>
 
       <!-- Games -->
-      <div class="card horizontal-card border-info shadow-lg">
-        <div class="card-body">
-          <h5>Games 🎮</h5>
-          <p>Favorite Roblox tower defense games:</p>
-          <ul>
-            <li><a href="https://example.com/game1" target="_blank">Game 1</a></li>
-            <li><a href="https://example.com/game2" target="_blank">Game 2</a></li>
-            <li><a href="https://example.com/game3" target="_blank">Game 3</a></li>
-          </ul>
+      <div class="col-12 col-md-4">
+        <div class="card horizontal-card border-success shadow-lg">
+          <div class="card-body">
+            <h5>Games 🎮</h5>
+            <p>Favorite Roblox tower defense games:</p>
+            <div class="d-flex flex-column gap-2">
+              <a href="https://www.roblox.com/games/12886143095/QOL-Anime-Last-Stand" target="_blank" class="btn btn-outline-success btn-sm w-100">
+                <img src="images/animeLastStandImg.png" class="btn-icon"> Anime Last Stand
+              </a>
+              <a href="https://www.roblox.com/games/107573139811370/PART-2-Anime-Crusaders" target="_blank" class="btn btn-outline-success btn-sm w-100">
+                <img src="images/animeCrusaders.png" class="btn-icon"> Anime Crusaders
+              </a>
+              <a href="https://www.roblox.com/games/16146832113/9-0-Anime-Vanguards" target="_blank" class="btn btn-outline-success btn-sm w-100">
+                <img src="images/animeVanguard.png" class="btn-icon"> Anime Vanguards
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Bikes -->
+      <div class="col-12 col-md-4">
+        <div class="card horizontal-card border-primary shadow-lg">
+          <div class="card-body">
+            <h5>Bikes 🏍️</h5>
+            <ul>
+              <li>Dream bike: Yamaha R1</li>
+              <li>Custom bike builds & mods</li>
+              <li>Weekend rides with friends 🚀</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- Goals -->
+      <div class="col-12 col-md-4">
+        <div class="card horizontal-card border-light shadow-lg">
+          <div class="card-body">
+            <h5>Goals 🎯</h5>
+            <ul>
+              <li>Improve my coding skills daily</li>
+              <li>Build a fitness tracker app</li>
+              <li>Get stronger every day</li>
+            </ul>
+          </div>
         </div>
       </div>
 
       <!-- Anime -->
-      <div class="card horizontal-card border-purple shadow-lg">
-        <div class="card-body">
-          <h5>Anime Watched ✨</h5>
-          <div class="anime-list" id="animeList">
-            <div class="anime-item">
-              <img src="naruto.jpg" alt="Naruto" class="anime-img">
-              <p>Naruto (9/10)</p>
+      <div class="col-12 col-md-4">
+        <div class="card horizontal-card border-purple shadow-lg">
+          <div class="card-body">
+            <h5>Anime Watched ✨</h5>
+            <div class="anime-list d-flex flex-column gap-2" id="animeList">
+              <div class="anime-item d-flex align-items-center gap-2">
+                <img src="naruto.jpg" alt="Naruto" class="anime-img">
+                <p>Naruto (9/10)</p>
+              </div>
+              <div class="anime-item d-flex align-items-center gap-2">
+                <img src="onepiece.jpg" alt="One Piece" class="anime-img">
+                <p>One Piece (10/10)</p>
+              </div>
             </div>
-            <div class="anime-item">
-              <img src="onepiece.jpg" alt="One Piece" class="anime-img">
-              <p>One Piece (10/10)</p>
+            <div class="add-anime mt-3">
+              <input type="text" id="animeName" class="form-control form-control-sm mb-2" placeholder="Anime Name">
+              <input type="text" id="animeImg" class="form-control form-control-sm mb-2" placeholder="Image URL">
+              <input type="text" id="animeRating" class="form-control form-control-sm mb-2" placeholder="Rating e.g., 8/10">
+              <button class="btn btn-warning btn-sm w-100" onclick="addAnime()">Add Anime</button>
             </div>
-          </div>
-          <div class="add-anime mt-2">
-            <input type="text" id="animeName" placeholder="Anime Name">
-            <input type="text" id="animeImg" placeholder="Image URL">
-            <input type="text" id="animeRating" placeholder="Rating e.g., 8/10">
-            <button class="btn btn-warning btn-sm" onclick="addAnime()">Add Anime</button>
           </div>
         </div>
       </div>
 
+    </div>
   </main>
 
-  
   <footer class="p-3 border-top border-danger text-light text-center mt-auto">
     © 2025 Dark's Page
   </footer>
-
-  <script>
-    function addAnime() {
-      const name = document.getElementById('animeName').value;
-      const img = document.getElementById('animeImg').value;
-      const rating = document.getElementById('animeRating').value;
-      if(!name || !img || !rating) { alert('Fill all fields!'); return; }
-
-      const animeList = document.getElementById('animeList');
-      const animeDiv = document.createElement('div');
-      animeDiv.className = 'anime-item';
-      animeDiv.innerHTML = `<img src="${img}" alt="${name}" class="anime-img"><p>${name} (${rating})</p>`;
-      animeList.appendChild(animeDiv);
-
-      document.getElementById('animeName').value = '';
-      document.getElementById('animeImg').value = '';
-      document.getElementById('animeRating').value = '';
-    }
-  </script>
 
 </body>
 </html>
